# product_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_bigquery_export_runs.py  0003_sync_attempts.py  0004_reconcile_runs_and_diffs.py  0005_bundle_components.py  0006_mapping_alert_assignee.py  0007_mapping_alert_product_name.py
app/: __init__.py  config.py  logging.py  main.py
app/adapters/: __init__.py  base.py  rakuten.py  rate_limit.py  shopify.py
app/api/: __init__.py  deps.py  health.py  internal_jobs.py  webhooks.py
app/bigquery/: __init__.py  client_base.py  google_client.py  in_memory_client.py
app/cli/: __init__.py  adjust_inventory.py  backfill_alert_product_names.py  build_channel_mapping.py  deactivate_legacy_mappings.py  dedupe_shopify_orders.py  export_to_bq.py  import_mappings.py  import_variant_mappings.py  poll_channels.py  push_bundle_availability.py  recompute_snapshots.py  reconcile_inventory.py  reprocess_pending_orders.py  seed_initial_stock.py  seed_variant_stock.py  zero_legacy_stock.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py  bigquery_export_run.py  bundle_component.py  channel_sku_mapping.py  enums.py  inventory.py  mapping_alert.py  master_sku.py  order.py  reconcile.py  sync_attempt.py  webhook_log.py
app/notifications/: __init__.py  slack.py
app/queue/: __init__.py  base.py  cloud_tasks.py  in_memory.py
app/services/: __init__.py  bigquery_export.py  bundle_push.py  exceptions.py  handlers.py  ingest.py  inventory.py  inventory_push.py  mapping.py  reconcile.py
app/ui/: __init__.py  auth.py  deps.py
csv_file/: _analyze.py  _analyze_inventory.py  _full_mapping.py  _review_pack.py
docs/: 01_requirements_definition.md  02_gcp_resource_approval.md  03_secret_manager_registration_guide.md  04_shopify_custom_app_guide.md  05_client_iam_commands.md  build_checklist_docx.py  build_docx.py  build_pdf.py
infra/terraform/: README.md  apis.tf  artifact_registry.tf  bigquery.tf  build_trigger.tf  outputs.tf  run.tf  run_jobs.tf  scheduler.tf  sql.tf  (+6 more)
scripts/: deploy_to_cloud_run.ps1  make_dummy_recon_csv.py  reconcile_admin.py  run_db_migration.ps1  seed_demo.py  send_webhook.ps1  smoke_inventory.py  smoke_webhook.ps1  verify_push.py  verify_shopify_meta.py  verify_slack.py
tests/: conftest.py  test_adapter_contract.py  test_adjust_inventory_cli.py  test_backfill_alert_names.py  test_build_channel_mapping.py  test_bundle_availability.py  test_health.py  test_import_variant_mappings.py  test_internal_jobs.py  test_inventory_push_service.py  test_make_dummy_recon_csv_script.py  test_models_smoke.py  test_queue.py  test_rakuten_adapter.py  test_rakuten_push_inventory.py  test_rate_limit.py  test_recompute_snapshots_cli.py  test_reconcile_admin_script.py  test_reconcile_inventory_cli.py  test_reconcile_service.py  test_reconcile_ui_pure.py  test_seed_variant_stock.py  test_shopify_adapter.py  test_shopify_push_inventory.py  test_slack_notifier.py  test_verify_push_script.py  test_verify_shopify_meta_script.py  test_verify_slack_script.py
(+41 files in other folders)
